	  why those cases can occur is due to the non-linear nature of some of
	  the reports for page locality studies.

	* bin/IgProfAnalyze.cc: NodeInfos are now allocated on a deque	
	  rather than on the heap.
	  Iterating on their children is now done by index, rather than by
	  iterator and NodeInfo::begin() and NodeInfo::end() are removed
	  to avoid confusion on what is actually happening.

2010-01-18  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgProfAnalyze.cc: New flag --show-locality-metrics added.
	  When specified, igprof reports calculates the metrics:

	  4096*(number of pages) / (memory allocation)

	  for every node.

2010-01-15  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgProfAnalyse.cc:	I slightly changed the --show-pages option
	  to count all the pages, even if they are in the middle of an
	  allocation. --show-partial-pages uses the old metrics.
	  Notice also that the output now reports MEM_LIVE@PAGES or
	  MEM_LIVE@PARTIAL_PAGES rather than just MEM_LIVE when either
	  --show-pages or --show-partial-pages is reported.

	* bin/IgProfAnalyse.cc:	--top-10 option was changed to be
	  configurable. It is now possible to specify "--top <n>" and get the
	  first "n" nodes in terms of cost.

2010-01-11  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgProfAnalyse.cc: Add 64 bit support for allocation position
	  (LK).
	  
	  bin/IgProfAnalyse.cc: Add --show-pages option which shows
	  information about memory fragmentation rather than the actual memory
	  counter. This means that we track the not-completely-allocated pages
	  that each node in the calltree produces.

	  Notice that this means that an allocation of 2MB has the same
	  cost of an allocation of 5KB or two allocation of 1B that are on
	  different pages.

	  Moreover 4096 allocations of 1B have the same cost of 1
	  allocation of 1B, if they are continuos (i.e. pooled
	  allocation are considered good).

	  The above is implemented by storing in `Counter::cnt`