@@ -10,6 +10,10 @@
 	  Iterating on their children is now done by index, rather than by
 	  iterator and NodeInfo::begin() and NodeInfo::end() are removed
 	  to avoid confusion on what is actually happening.
+	
+	* bin/IgProfAnalyze.cc:	add filter progress indicator.
+	  igprof-analyze now shows the progress of each filter by printing
+	  out a set of dots.
 
 2010-01-18  Giulio Eulisse <giulio.eulisse@cern.ch>
 
